@@ -309,7 +309,6 @@ an example of a custom formatter:
       return val.toFixed(axis.tickDecimals) + " B";
   }
 
-
 Time series data
 ================
 
@@ -380,6 +379,7 @@ through the following axis options:
   minTickSize: array
   timeformat: null or format string
   monthNames: null or array of size 12 of strings
+  twelveHourClock: boolean
 
 Here "timeformat" is a format string to use. You might use it like
 this:
@@ -392,20 +392,25 @@ this:
 This will result in tick labels like "2000/12/24". The following
 specifiers are supported
 
-  %h': hours
-  %H': hours (left-padded with a zero)
-  %M': minutes (left-padded with a zero)
-  %S': seconds (left-padded with a zero)
-  %d': day of month (1-31)
-  %m': month (1-12)
-  %y': year (four digits)
-  %b': month name (customizable)
+  %h: hours
+  %H: hours (left-padded with a zero)
+  %M: minutes (left-padded with a zero)
+  %S: seconds (left-padded with a zero)
+  %d: day of month (1-31)
+  %m: month (1-12)
+  %y: year (four digits)
+  %b: month name (customizable)
+  %p: am/pm, additionally switches %h/%H to 12 hour instead of 24
+  %P: AM/PM (uppercase version of %p)
 
 You can customize the month names with the "monthNames" option. For
 instance, for Danish you might specify:
 
   monthNames: ["jan", "feb", "mar", "apr", "maj", "jun", "jul", "aug", "sep", "okt", "nov", "dec"]
 
+If you set "twelveHourClock" to true, the autogenerated timestamps
+will use 12 hour AM/PM timestamps instead of 24 hour.
+  
 The format string and month names are used by a very simple built-in
 format function that takes a date object, a format string (and
 optionally an array of month names) and returns the formatted string.
