@@ -113,6 +113,8 @@ Changes:
 
 - Axis transformation support, useful for non-linear plots, e.g. log
   axes and compressed time axes (like omitting weekends).
+
+- Support for twelve-hour date formatting (patch by Forrest Aldridge).
   
 Bug fixes:
 
@@ -154,6 +156,7 @@ Bug fixes:
   smarter.
 - Fix for uneven axis margins (report and patch by Paul Kienzle) and
   snapping to ticks (concurrent report and patch by lifthrasiir).
+- Fixed bug with slicing in findNearbyItems (patch by zollman).
 
 Flot 0.5
 --------
